--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -10,9 +10,25 @@
         <a href="#" class="text_navigation">Contact</a></li>
     </nav>
     <div class="shapka">
-        <div class="shapka__photo"> <img src="../assets/images/chel.webp"></div>
-        <div class="shapka__photo"> <img src="../assets/images/search.webp"></div>
-        <div class="shapka__photo"> <img src="../assets/images/fav.webp"></div>
-        <div class="shapka__photo"> <img src="../assets/images/corzina.webp"></div>
+        <div class="shapka__photo">
+            <a  href="#">
+                <img src="../assets/images/chel.webp">
+            </a>
+        </div>
+        <div class="shapka__photo">
+            <a href="#">
+                <img src="../assets/images/search.webp">
+            </a>
+        </div>
+        <div class="shapka__photo">
+            <a href="#">
+                <img src="../assets/images/fav.webp">
+            </a>
+        </div>
+        <div class="shapka__photo">
+            <a href="#">
+                <img src="../assets/images/corzina.webp">
+            </a>
+        </div>
     </div>
 </header>
