--- a/src/components/_card2.html
+++ b/src/components/_card2.html
@@ -1,26 +1,12 @@
 <div class="card__2">
     <div class="block__card2__img">
         <div class="block__card__new">
-            <picture CLASS="card1__image2">
+            <picture class="card1__image2">
                 <source srcset="@@img-sm.webp" media="(max-width: 48px)">
                 <source srcset="@@img-lg.webp" media="(max-width: 48px)">
                 <img src="@@img.webp" class="card__image2">
             </picture>
             <div><p class="card__new">@@new</p></div>
-
-            <!-- Добавленные элементы для анимации -->
-            <div class="card__overlay"></div>
-            <div class="card__actions">
-                <button class="card__action-btn">
-                    <img src="../assets/images/share.webp">
-                </button>
-                <button class="card__action-btn">
-                    <img src="../assets/images/com.webp">
-                </button>
-                <button class="card__action-btn">
-                    <img src="../assets/images/like.webp">
-                </button>
-            </div>
         </div>
         <picture>
             <source srcset="@@img-sm.webp" media="(max-width: 285px)">
