--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,7 +10,7 @@
 @use 'layout/container';
 
 // ==== 4. Components ====
-@use 'components/button';
+@use 'components/button1';
 @use 'components/card';
 @use 'components/_header';
 @use 'components/_card2';
@@ -117,7 +117,7 @@
 .our_products {
   margin-top: 60px;
   .our_products_all_card {
-    margin-top: 136px;
+    margin-top: 48px;
     margin-left: 102px;
     .our_products_part_card1 {
       display: flex;
@@ -134,7 +134,195 @@
     font-weight: 700;
     font-size: 40px;
     line-height: 120%;
-    letter-spacing: 0%;
     text-align: center;
+  }
+  .expand_button_our_products {
+    text-align: center;
+    margin-top: 32px;
+  }
+}
+
+.inspirations {
+  width: 100%;
+  height: 670px;
+  display: flex;
+  background: #FCF8F3;
+  margin-top: 70px;
+  .container_inspirations_text {
+    margin-top: 223px;
+    margin-left: 100px;
+    .inspirations_content1 {
+      font-family: Poppins;
+      font-weight: 700;
+      font-size: 40px;
+      line-height: 120%;
+      color: #3A3A3A;
+    }
+    .inspirations_content2 {
+      font-family: Poppins;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 150%;
+      color: #616161;
+      padding-top: 7px;
+    }
+    .inspirations_button1 {
+      width: 176px;
+      height: 48px;
+      background: #B88E2F;
+      font-family: Poppins;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 150%;
+      color: white;
+      border: none;
+      margin-top: 37px;
+      cursor: pointer;
+    }
+  }
+  .inspirations_container_img1 {
+    margin-top: 44px;
+    margin-left: 45px;
+    display: flex;
+    .inspirations_container_img2{
+      .inspirations_container_img3{
+        .inspirations_content_3 {
+         background: rgba(255, 255, 255, 0.72);
+         width: 217px;
+         height: 130px;
+          margin-top: -159px;
+          z-index: 1;
+          position: absolute;
+          .text_inspirations{
+            font-family: Poppins;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 150%;
+            color: rgba(97, 97, 97, 1);
+            margin-top: 32px;
+            margin-left: 32px;
+          }
+          .text_inspirations2 {
+            font-family: Poppins;
+            font-weight: 600;
+            font-size: 28px;
+            line-height: 120%;
+            color: rgba(58, 58, 58, 1);
+            margin-left: 32px;
+          }
+       }
+        .inspirations_content4 {
+          margin-top: -79px;
+          position: absolute;
+          margin-left: 210px;
+          .inspirations_button2 {
+            width: 48px;
+            height: 48px;
+            border: none;
+            cursor: pointer;
+            background: none;
+          }
+        }
+      }
+    }
+  }
+  .inspirations_img {
+    margin-left: 24px;
+  }
+  .inspirations_btn1 {
+    border: none;
+    cursor: pointer;
+    width: 48px;
+    height: 48px;
+    background: none;
+    margin-top: 255px;
+    position: absolute;
+    margin-left: -33px;
+    z-index: 1;
+  }
+  .inspirations_img2 {
+    margin-left: 24px;
+    position: absolute;
+  }
+  .inspirations_btn2_container {
+    display: flex;
+    gap: 20px;
+    margin-top: 46px;
+    margin-left: 24px;
+    .inspirations_btn2 {
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+  }
+}
+.share_block {
+  margin-top: 67px;
+  .container_share {
+    text-align: center;
+    .share_content {
+      font-family: Poppins;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 150%;
+      text-align: center;
+      color: rgba(97, 97, 97, 1);
+    }
+    .share_content2 {
+      font-family: Poppins;
+      font-weight: 700;
+      font-size: 40px;
+      line-height: 120%;
+      text-align: center;
+      color: rgba(58, 58, 58, 1);
+      padding-top: 8px;
+    }
+  }
+  .share_container_img {
+    display: flex;
+    position: absolute;
+    .share_img {
+      position: absolute;
+      margin-top: -30px;
+    }
+    .share_img2 {
+      position: absolute;
+      margin-top: 364px;
+    }
+    .share_img3 {
+      position: absolute;
+      margin-left: 92px;
+      margin-top: 39px;
+    }
+    .share_img4 {
+      position: absolute;
+      margin-top: 364px;
+      margin-left: 200px;
+    }
+    .share_img5 {
+      position: absolute;
+      margin-top: 129px;
+      margin-left: 557px;
+    }
+    .share_img6 {
+      position: absolute;
+      margin-top: 439px;
+      margin-left: 866px;
+    }
+    .share_img7 {
+      position: absolute;
+      margin-top: 72px;
+      margin-left: 866px;
+    }
+    .share_img8 {
+      position: absolute;
+      margin-top: 439px;
+      margin-left: 1059px;
+    }
+    .share_img9 {
+      position: absolute;
+      margin-left: 1171px;
+      margin-top: -14px;
+    }
   }
 }
