--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -4,8 +4,8 @@
         <div class="logo__text"><b>Furniro</b></div>
     </div>
     <nav class="navigation">
-        <a href="#" class="text_navigation">Home</a></li>
-        <a href="#" class="text_navigation">Shop</a></li>
+        <a href="/index.html" class="text_navigation">Home</a></li>
+        <a href="/shop.html" class="text_navigation">Shop</a></li>
         <a href="#" class="text_navigation">About</a></li>
         <a href="#" class="text_navigation">Contact</a></li>
     </nav>
