--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @use 'components/_header';
 @use 'components/_card2';
 @use 'components/_footer';
+@use 'components/_banner';
 
 
 .block_New_Arrival {
