--- a/src/components/_footer.html
+++ b/src/components/_footer.html
@@ -12,8 +12,8 @@
     <div class="footer__section">
       <h3 class="footer__title">Links</h3>
       <ul class="footer__list">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Shop</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/shop.html">Shop</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
