--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,11 @@
 @use 'components/_card2';
 @use 'components/_footer';
 @use 'components/_banner';
+@use 'components/_button_number_active';
+@use 'components/_button_number_passive';
+@use 'components/_button_number_next';
+@use 'components/_benefits';
+@use 'components/_product';
 
 
 .block_New_Arrival {
@@ -327,5 +332,199 @@
       margin-left: 1171px;
       margin-top: -14px;
     }
+  }
+}
+
+.filter-section {
+  display: flex;
+  align-items: center;
+  margin: 108px 0px;
+  background: rgba(249, 241, 231, 1);
+  height: 100px;
+  width: 100%;
+
+  .filter-section__left {
+    display: flex;
+    align-items: center;
+    margin-left: 98px;
+  }
+
+  .filter-section__right {
+    display: flex;
+    align-items: center;
+    margin-left: 488px;
+  }
+
+  .filter-section__button {
+    background-color: transparent;
+    border: none;
+    padding: 5px 10px;
+    margin-right: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    color: #333;
+
+    i {
+      margin-right: 5px;
+      font-size: 16px;
+    }
+  }
+
+  .filter-section__results {
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 100%;
+    padding-left: 34px;
+  }
+
+  .filter-section__show, .filter-section__sort {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    font-size: 14px;
+    color: #555;
+
+    span {
+      margin-right: 5px;
+      font-family: Poppins;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 100%;
+      letter-spacing: 0%;
+      color: rgba(0, 0, 0, 1);
+    }
+  }
+
+  .filter-section__select {
+    padding: 5px 18px;
+    border: none;
+    width: 55px;
+    height: 55px;
+    font-size: 14px;
+    appearance: none;
+    background: rgba(255, 255, 255, 1);
+    background-size: 12px;
+    cursor: pointer;
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    color: rgba(159, 159, 159, 1);
+
+
+    .filter-section__select:focus {
+      outline: none;
+      border-color: #007bff;
+    }
+  }
+  .filter-section__select1 {
+    padding: 5px 30px;
+    border: none;
+    width: 158px;
+    height: 55px;
+    font-size: 14px;
+    appearance: none;
+    background: rgba(255, 255, 255, 1);
+    background-size: 12px;
+    cursor: pointer;
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    color: rgba(159, 159, 159, 1);}
+}
+
+.our-products {
+  margin-top: -79px;
+  margin-left: 60px;
+  .our-products__cards-container {
+    .our-products__card-group {
+      display: flex;
+      gap: 32px;
+      margin: 40px;
+    }
+  }
+  .button_choice {
+    display: flex;
+    gap: 38px;
+    margin-left: 487px;
+    margin-top: 30px;
+  }
+}
+.block_benefits {
+  margin-top: 85px;
+}
+
+.strelki{
+  margin-top: 52px;
+  width: 96%;
+  height: 100px;
+  background: rgba(249, 241, 231, 1);
+  display: flex;
+  gap: 35px;
+  padding-left: 60px;
+  align-items: center;
+  .strelki__text{
+    font-size: 16px;
+    color: rgba(159, 159, 159, 1);
+  }
+  .strelki__span{
+    font-size: 16px;
+    color: black;
+  }
+  .strelki__block{
+    padding-left: 20px;
+    display: flex;
+    align-items: center;
+    height: 37px;
+  }
+}
+.descrip{
+  align-items: center;
+  border-top: 1px solid #9f9f9f;
+  border-bottom: 1px solid #9f9f9f;
+  padding: 20px;
+  .descrip__title{
+    align-items: center;
+    gap: 40px;
+    display: flex;
+    justify-content: center;
+  }
+  .descrip__span{
+    font-size: 24px;
+    color: black;
+  }
+  .descrip__description{
+    width: 1026px;
+    font-size: 16px;
+    color: #9f9f9f;
+  }
+  .descrip__abzac{
+    transform: translateX(15%);
+  }
+  .descrip__text{
+    font-size: 24px;
+    color: #9f9f9f;
+  }
+  .descrip__img{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin-bottom: 20px;
+  }
+}
+.shop__karti{
+  margin-top: 50px;
+  .shop__karti__zag{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+    font-size: 36px;
+    font-weight: bolder;
   }
 }
